# KoTAN

./: README.ko.md  README.md  setup.py  test.ipynb
examples/: machine_translation.ipynb  text_augumentation.ipynb
konta/: __init__.py  konta.py  test.ipynb
konta-demo/: pyproject.toml
konta-demo/konta_demo/: __init__.py  konta.py
konta-demo/konta_demo/tasks/: __init__.py
konta/tasks/: __init__.py  data_augumentation.py  machine_translation.py
kotan/: Untitled.ipynb  pyproject.toml
kotan/kotan/: __init__.py  const.py  job.py
kotan/kotan/tasks/: __init__.py  data_augmentation.py  machine_translation.py  style_convert.py
