[tool.poetry]
name = "konta-demo"
version = "0.1.0"
description = ""
authors = ["juhwanlee <juhwanlee@diquest.com>"]
readme = "README.md"
packages = [{include = "konta_demo"}]

[tool.poetry.dependencies]
python = "~3.8"
transformers = "4.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
