[tool.poetry]
name = "kotan"
version = "0.1.0"
description = ""
authors = ["juhwanlee <juhwanlee@diquest.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.8"
transformers = "4.29.1"
torch = "2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
