[tool.poetry]
name = "kotan"
version = "1.1.0"
description = ""
authors = ["jisukim <jisukim8873@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.29.1"
torch = "2.0.0"
sentencepiece = "^0.1.99"
konlpy = "0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
